--- a/po/it.po
+++ b/po/it.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-10 16:20+0100\n"
+"POT-Creation-Date: 2020-11-23 08:13+0100\n"
 "PO-Revision-Date: 2020-11-11 10:31+0100\n"
 "Last-Translator: Maurizio Ballo <xmaurizio.13@hotmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/gpodder/language/"
@@ -157,7 +157,7 @@ msgstr "Modulo Python non installato: %(module)s"
 
 #: src/gpodder/model.py:481 src/gpodder/youtube.py:444
 #: src/gpodder/plugins/soundcloud.py:174
-#: share/gpodder/extensions/youtube-dl.py:207
+#: share/gpodder/extensions/youtube-dl.py:208
 msgid "No description available"
 msgstr "Nessuna descrizione disponibile"
 
@@ -1679,7 +1679,8 @@ msgstr "Filtra episodi"
 
 #: share/gpodder/extensions/filter.py:16
 msgid "Disable automatic downloads based on episode title."
-msgstr "Disabilita gli scaricamenti automatici basati sul titolo dell'episodio."
+msgstr ""
+"Disabilita gli scaricamenti automatici basati sul titolo dell'episodio."
 
 #: share/gpodder/extensions/filter.py:53
 msgid "Regular Expression"
@@ -1707,11 +1708,17 @@ msgid ""
 "for all episodes in this channel.  The patterns match partial text in "
 "episode title, and an empty pattern matches any title.  The except pattern "
 "unblocks blocked episodes (to block all then unblock some)."
-msgstr "Facendo clic sul blocco spunte e lasciandolo vuoto disabiliterà l'auto-scaricamento per tutti gli episodi in questo canale.  I modelli corrispondono al testo parziale nel titolo dell'episodio, e uno schema vuoto corrisponde a qualunque titolo. Il modello eccetto sblocca gli episodi bloccati (per bloccare tutti e poi sbloccarne alcuni)."
+msgstr ""
+"Facendo clic sul blocco spunte e lasciandolo vuoto disabiliterà l'auto-"
+"scaricamento per tutti gli episodi in questo canale.  I modelli "
+"corrispondono al testo parziale nel titolo dell'episodio, e uno schema vuoto "
+"corrisponde a qualunque titolo. Il modello eccetto sblocca gli episodi "
+"bloccati (per bloccare tutti e poi sbloccarne alcuni)."
 
 #: share/gpodder/extensions/filter.py:166
 msgid "Filter episodes now (undoes any episodes you marked as old)"
-msgstr "Filtra gli episodi ora (toglie la marcatura di vecchio da ogni episodio)"
+msgstr ""
+"Filtra gli episodi ora (toglie la marcatura di vecchio da ogni episodio)"
 
 #: share/gpodder/extensions/gtk_statusicon.py:19
 msgid "Gtk Status Icon"
@@ -1872,7 +1879,7 @@ msgid "Manage Youtube subscriptions using youtube-dl (pip install youtube_dl)"
 msgstr ""
 "Gestisci le tue iscrizioni Youtube usando youtube-dl (pip install youtube_dl)"
 
-#: share/gpodder/extensions/youtube-dl.py:449
+#: share/gpodder/extensions/youtube-dl.py:454
 msgid "Download with Youtube-DL"
 msgstr "Scarica con Youtube-DL"
 
