--- a/po/ru.po
+++ b/po/ru.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gPodder 2.10+git\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-11-24 17:28+0100\n"
-"PO-Revision-Date: 2019-02-13 22:16+0100\n"
+"PO-Revision-Date: 2021-02-01 22:56+0700\n"
 "Last-Translator: mrKaban <КонтинентСвободы.рф>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: src/gpodder/config.py:54
 #, python-format
@@ -1701,10 +1701,10 @@ msgid "\"Open website\" episode and podcast context menu"
 msgstr "\"Открыть сайт\" в контекстном меню эпизода"
 
 #: share/gpodder/extensions/episode_website_context_menu.py:16
-#, fuzzy
 msgid ""
 "Add a context menu item for opening the website of an episode or podcast"
-msgstr "Добавляет пункт контекстного меню для открытия сайта эпизода"
+msgstr ""
+"Добавляет пункт контекстного меню для открытия сайта эпизода или подкаста"
 
 #: share/gpodder/extensions/episode_website_context_menu.py:34
 #: share/gpodder/extensions/episode_website_context_menu.py:37
@@ -1719,7 +1719,7 @@ msgstr "Удалить эпизоды"
 
 #: share/gpodder/extensions/filter.py:16
 msgid "Disable automatic downloads based on episode title."
-msgstr ""
+msgstr "Не загружать автоматически по названию эпизода."
 
 #: share/gpodder/extensions/filter.py:53
 msgid "Regular Expression"
@@ -2050,10 +2050,8 @@ msgid "Preferred YouTube format:"
 msgstr "Предпочитаемый формат YouTube:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:8
-#, fuzzy
-#| msgid "Preferred YouTube format:"
 msgid "Preferred YouTube HLS format:"
-msgstr "Предпочитаемый формат YouTube:"
+msgstr "Предпочитаемый HLS формат YouTube:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:9
 msgid "Preferred Vimeo format:"
@@ -2216,10 +2214,8 @@ msgid "Download new episodes"
 msgstr "Загрузить новые эпизоды"
 
 #: share/gpodder/ui/gtk/menus.ui.h:11
-#, fuzzy
-#| msgid "Find new podcasts"
 msgid "Find Podcast"
-msgstr "Найти новые подкасты"
+msgstr "Найти подкаст"
 
 #: share/gpodder/ui/gtk/menus.ui.h:12
 msgid "_Subscriptions"
@@ -2254,10 +2250,8 @@ msgid "Change delete lock"
 msgstr "Возможность удаления"
 
 #: share/gpodder/ui/gtk/menus.ui.h:28
-#, fuzzy
-#| msgid "Delete episodes"
 msgid "Find Episode"
-msgstr "Удалить эпизоды"
+msgstr "Найти эпизод"
 
 #: share/gpodder/ui/gtk/menus.ui.h:31
 msgid "Sync to device"
@@ -2296,10 +2290,8 @@ msgid "Hide podcasts without episodes"
 msgstr "Скрыть подкасты без эпизодов"
 
 #: share/gpodder/ui/gtk/menus.ui.h:41
-#, fuzzy
-#| msgid "Always show Find entries"
 msgid "Always show New Episodes"
-msgstr "Всегда показывать найденные записи"
+msgstr "Всегда показывать новые выпуски"
 
 #: share/gpodder/ui/gtk/menus.ui.h:42
 msgid "Visible columns"
