update fr translation

--- a/po/fr.po
+++ b/po/fr.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-26 21:24+0100\n"
-"PO-Revision-Date: 2020-11-24 17:39+0100\n"
+"PO-Revision-Date: 2021-03-27 14:15+0100\n"
 "Last-Translator: Eric Le Lay <elelay@macports.org>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/gpodder/language/"
 "fr/)\n"
@@ -535,16 +535,12 @@ msgid "Released"
 msgstr "Publié le"
 
 #: src/gpodder/gtkui/main.py:871
-#, fuzzy
-#| msgid "Size"
 msgid "Size+"
-msgstr "Taille"
+msgstr "Taille+"
 
 #: src/gpodder/gtkui/main.py:879
-#, fuzzy
-#| msgid "Duration"
 msgid "Duration+"
-msgstr "Durée"
+msgstr "Durée+"
 
 #: src/gpodder/gtkui/main.py:1036 src/gpodder/gtkui/main.py:1185
 #: share/gpodder/ui/gtk/gpodder.ui.h:11
@@ -1943,10 +1939,8 @@ msgid ""
 msgstr ""
 
 #: share/gpodder/extensions/youtube-dl.py:463
-#, fuzzy
-#| msgid "Download with Youtube-DL"
 msgid "Old Youtube-DL"
-msgstr "Télécharger avec Youtube-DL"
+msgstr "Vieille version de Youtube-DL"
 
 #: share/gpodder/extensions/youtube-dl.py:468
 msgid "Download with Youtube-DL"
